--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
  <h1></h1>
-<p><b>Meu nome é Gabriel Manzato e sou estudante </b></p>
+<p><b>Meu nome é Gabriel Manzato e sou estudante do colégio de Aplicação da UEL </b></p>
   <br>
   <br>
   <i>E tem algumas coisas que gosto de fazer no meu tempo livre, que são:</i>
